--- a/autor.html
+++ b/autor.html
@@ -1,5 +1,7 @@
 <html>
     <body>
-        <h2>Sobre o Autor:<h2>
+        <h2>Sobre o Autor:<h2
+            
+            <p>Meu nome eh Emerson Castelano</p>>
     </body>
 </html>
