--- a/home.html
+++ b/home.html
@@ -3,5 +3,12 @@
         <h2>Meus Cursos:</h2>
 
         <a href="autor.html">autor</a>
+
+        <img src="Logotipo_600x550.png" />
+
+        <ul>
+            <li>Curso Avançado de Git</li>
+            <li>Curso Avançado de HTML</li>
+        </ul>
     </body>
 </html>
